--- a/popup.css
+++ b/popup.css
@@ -1,156 +1,169 @@
 *{
     padding: 0;
     margin: 0;
-    padding-bottom: 15px;
+    box-sizing: border-box;
 }   
-body {
-    margin-top: 15px;
+
+body{
     font-family: 'Quicksand', sans-serif;
-    width: 250px;
-    padding: 1px 10px 25px 10px;
-    height: 450px;
-    background-color: rgba(95, 152, 250, 0.183);
+    width: 350px;
+    padding: 6px 5px;
+    background-color: #426ea128;
   }
+
 .main{
-    /* background-color: white; */
-    border: 2px solid white;
+    background-image: url("https://transparenttextures.com/patterns/cubes.png");
+    background-color: rgb(255, 255, 255);
     border-radius: 20px;
+    border: 2px solid rgba(95, 152, 250, 0.112);
     height: 100%;
-    justify-content: center;
-    padding: 5px;
-    background-color: #fffbfb;
-    background-image: linear-gradient(0deg, #fffbfb 0%, #f2fcff 100%);    
-
-}
-.heading{
-    margin-left: 8px;
-    justify-content: center;
-    background-color: #0081ff;
-    background-image: linear-gradient(62deg, #0081ff 0%, #a249ff 100%);    
-    border-radius: 10px;
-    width: 220px;
-    margin-top: 20px;
-    padding-top: 10px;
-    text-align: center;
-    color: white;
-
-}
-.dark-patterns{
-    font-size: 1.4rem;
-    font-weight: 800;
-    margin: 30px auto 10px 2px;
-    border: 2px solid rgba(249, 249, 74, 0.655);
-    border-top-right-radius: 10px;
-    border-top-left-radius: 10px;
-    padding: 5px 0px 5px 8px;
-    background-color: rgba(249, 249, 74, 0.655);
-}
-.items{
-    margin-top: 30px;
-    /* border: 2px solid black; */
-    padding-top: 12px;
-    padding-left: 10px;
-    display: flex;
-    flex-direction: column;
-    align-items: start;
-    align-content: start;
-}
-.patterns{
-    margin-bottom: 0;
-    padding-bottom: 0;
-    display: flex;
-    align-items: center;
-}
-.ads{
-    font-size: 15px;
-    font-weight: 1000;
-    letter-spacing: 1px;
 }
 
-.result{
-    height: 19px;
-    margin-left: 5px;
-    font-size: 14px;
-    font-weight: 600;
-    color: rgb(99, 99, 99);
-    display: flex;
-}
-.iconss{
-    margin-right: 5px;
-    
-}
-
-#status{
-    margin: 20px auto 10px 20px;
-    font-size: 15px;
-    font-weight: 800;
-}
-
-/* Price */
-.price{
-    height: 35px;
-    background-color: #a4d4f918;
-    border: 2px solid rgba(110, 110, 110, 0.315);
-    border-radius: 10px;
+.head{
+    box-shadow: rgba(0, 0, 0, 0.15) 0px 15px 25px, rgba(0, 0, 0, 0.05) 0px 5px 10px;
+    background-color: #74EBD5;
+    background-image: linear-gradient(90deg, #74EBD5 0%, #9FACE6 100%);
+    border-radius: 15px;
+    margin: 5px 4px;
+    padding: 5px 0;
     display: flex;
     justify-content: space-around;
     align-items: center;
-    padding: 2px 0px 2px 0px;
+}
+
+#head-logo{
+    width: 14%;
+    height: 14%;
+}
+#head-title{
+    font-size: 1.1rem;
+    font-weight: bold;
+}
+.content{
+    padding: 10px 5px 10px;
+}
+.boxes{
+    border: 2px solid rgb(34, 37, 37);
+    border-radius: 10px;
+    margin: 5px 6px;
+    padding: 5px 10px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
     transition-duration: 100ms;
 }
-.price:hover{
-    box-shadow: 10px 10px 30px rgba(0, 0, 0, 0.265), inset 10px 10px 30px #ffffff41;
-    scale: 1.01;
+.boxes:hover{
+    opacity: 0.8;
 }
-#price-name{
-    padding-top: 15px;
-    /* border: 2px solid black; */
-    font-size: 13px;
-    font-weight: bolder;
-    font-family: 'Exo 2', sans-serif;
-    color: rgb(49, 49, 49);
+.boxes h2{
+    font-size: 1rem;
+    font-family: 'Nunito', sans-serif;
+
 }
-.price_svg{
-    height: 25px;
-    margin-top: 15px;
-}
-.price-anchor{
-    font-size: 20px;
-    border: 2px solid rgb(251, 251, 251);
-    background-color: white;
-    font-weight: bolder;
-    width: 30px;
-    height: 14px;
-    text-align: center;
-    border-radius: 15px;
-    text-decoration: none;
+#age-value{
+    font-size: 0.9rem;
+    font-family: 'Nunito', sans-serif;
+    font-weight: bold;
+    color: rgb(68, 65, 65);
 }
 
-
-
-
-/* Scanning Button */
-.not_per{
-    text-align: center;
-    /* padding-bottom: 0px; */
-    width: 230px;
-    border: 2px solid #3e99d6;
-    background-color: #3e99d6;
+#more{
+    padding: 5px 12px 2px;
     font-size: 1.1rem;
-    padding: 5px 0px;
-    border-radius: 10px;
-    margin-left: -8px;
-    margin-top: 10px;
-    margin-bottom: 10px;
-    color: white;
-    font-weight: bolder;
-    transition-duration: 200ms;
+    font-weight: 700;
+    font-family: 'PT Sans Narrow', sans-serif;
+    word-spacing: 2px;
+    letter-spacing: 1px;
 }
-.not_per:hover{
-    background-color: white;
-    color: #3e99d6;
+hr{
+    width: 80%;
+    height: 3px;
+    border-radius: 5px;
+    color: rgb(1, 55, 22);
+    background-color:rgb(1, 55, 22) ;
+    margin-left: 12px;
 }
 
-.notification_div {
-    display: none; 
+.buttons{
+    margin-top: 10px;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
 }
+#price-trend,#ssl,#not_per{
+    margin: 4px 10px;
+    padding: 5px 0px;
+    font-size: 1rem;
+    font-family: 'Chakra Petch', sans-serif;
+    background-color: rgb(13, 53, 53);
+    color: white;
+    border-radius: 10px;
+    transition-duration: 100ms;
+}
+#not_per:hover{
+    cursor: pointer;
+    scale: 1.02;
+    background-color: rgba(13, 53, 53, 0.92);
+}
+#ui_decep{
+    margin: 4px 10px;
+    padding: 5px 0px;
+    font-size: 1rem;
+    font-family: 'Chakra Petch', sans-serif;
+    background-color: rgb(13, 53, 53);
+    color: white;
+    border-radius: 10px;
+    transition-duration: 100ms;
+}
+#ui_decep:hover,#ch_redi:hover{
+    cursor: pointer;
+    scale: 1.02;
+    background-color: rgba(13, 53, 53, 0.92);
+}
+#ch_redi{
+    margin: 4px 10px;
+    padding: 5px 0px;
+    font-size: 1rem;
+    font-family: 'Chakra Petch', sans-serif;
+    background-color: rgb(13, 53, 53);
+    color: white;
+    border-radius: 10px;
+    transition-duration: 100ms;
+}
+#price-trend{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    padding: 3px 0px;
+    margin: 4px 10px;
+    font-size: 1rem;
+    border-radius: 10px;
+    transition-duration: 100ms;
+}
+#price-trend:hover{
+    scale: 1.02;
+    cursor: pointer;
+}
+
+#price-name{
+    font-family: 'Chakra Petch', sans-serif;
+    font-weight: 800;
+}
+
+#loadingspinner{
+    padding: 5px;
+}
+#loading-spinner {
+    border: 4px solid rgba(255, 255, 255, 0.3);
+    border-radius: 50%;
+    border-top: 4px solid #007a56;
+    width: 30px;
+    height: 30px;
+    animation: spin 1s linear infinite;
+    margin: 0 auto;
+  }
+  
+  @keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
+  }
